--- a/css/styles.css
+++ b/css/styles.css
@@ -3586,21 +3586,18 @@ html {
   padding: 0;
 }
 
+
 .step-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   position: relative;
 }
 
+
 .step-item + .step-item::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -50%;
-  width: 100%;
-  height: 2px;
-  background: #ddd;
-  transform: translateY(-50%);
-  z-index: 0;
+  display: none;
 }
 
 .step-icon {
